--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"ccxt": "^1.95.35",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"socket.io": "^4.5.3"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
